<resources>
    <string name="app_name">Masak apa nich</string>
    <string name="add_item">add item</string>
    <string name="input_formTxt">Tambah item</string>
    <string name="judul_masakan_hint">Judul masakan</string>
    <string name="bahan_dasar_hint">Bahan dasar</string>
    <string name="save_buttonTxt">Simpan</string>
    <string name="ic_judul_masakan">Judul Masakan</string>
    <string name="bahan_rempah_hint">Rempah</string>
    <string name="foto_masakan">foto masakan</string>
    <string name="ic_tanggal_dibuat">Dibuat pada: </string>
    <string name="judulMasakanTxt">Judul Masakan</string>
    <string name="tanggalTxt">Tanggal Dibuat: </string>
    <string name="bahanUtamaTxt">Bahan Utama\t\t\t: </string>
    <string name="rempahTxt">Rempah\t\t\t\t\t\t\t: </string>
</resources>