<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/dark_yellow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/input_formTxt"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_judulMasakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:hint="@string/judul_masakan_hint"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            />

        <EditText
            android:id="@+id/et_bahanDasar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:hint="@string/bahan_dasar_hint"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            />

        <EditText
            android:id="@+id/et_rempah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:hint="@string/bahan_rempah_hint"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save_buttonTxt"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>