<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailActivity"
    android:weightSum="100"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_masakanDetail"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:src="@drawable/fried"
        android:layout_marginVertical="20dp"
        />

    <TextView
        android:id="@+id/tv_judulMasakan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judulMasakanTxt"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggalTxt"
        android:textStyle="italic"
        android:textSize="15sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_bahanUtama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bahanUtamaTxt"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/tv_rempah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rempahTxt"
        android:layout_marginHorizontal="15dp"/>

</LinearLayout>